--- a/source/components/Post/styles.m.css
+++ b/source/components/Post/styles.m.css
@@ -3,7 +3,6 @@
     width: 500px;
     margin-top: 10px;
     padding: 12px;
-    border: 1px solid var(--paletteColor3);
     border-radius: 3px;
     background-color: var(--paletteColor2);
     word-wrap: break-word;
@@ -15,7 +14,7 @@
         border: 1px solid var(--paletteColor5);
         border-radius: 50%;
         cursor: pointer;
-      }
+    }
 
     & a,
     & time {
@@ -26,39 +25,39 @@
 
         &:hover {
             text-decoration: underline;
-         }
-      }
+        }
+    }
 
     & a {
         top: 15px;
         color: var(--paletteColor7);
         font-weight: 700;
-      }
+    }
 
     & time {
         top: 35px;
         color: var(--paletteColor5);
         font-size: 12px;
-      }
+    }
 
     & p {
         margin-top: 16px;
         font-size: 14px;
-      }
+    }
 
-    .cross {
+    & .cross {
         content: '';
         position: absolute;
         top: 12px;
         right: 12px;
         width: 10px;
         height: 10px;
-        background-image: url("../../theme/assets/cross.png");
+        background-image: url('../../theme/assets/cross.png');
         background-repeat: no-repeat;
         cursor: pointer;
 
         &:hover {
             background-position: -13px 0;
-         }
+        }
     }
 }
